# modal_or_local

./: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-package.yml
modal_or_local/: __init__.py  logging_config.py  modal_image_prep.py  modal_or_local.py  modal_or_local_copy.py  modal_or_local_dir.py
scripts/: _create_modal_toml_file.py  check_mtime.py  example.py
tests/: run_tests.py  test_modal_or_local.py  test_modal_or_local_copy.py  test_modal_or_local_dir.py
